policies/gatekeeper/constraints/no-run-as-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRunAsRoot
metadata:
  name: no-run-as-root
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchLabels:
        pci-cde: "true"
